# neuroon-unified-communication

./: CMakeLists.txt  LICENSE  README.md  update-version.sh
API/: ic_dfu.h  ic_frame_handle.h  ic_low_level_control.h  ic_version.h
API/include/: ic_frame_handle_batch.h
src/: ic_characteristics.c  ic_crc8.c  ic_crc8.h  ic_device.c  ic_dfu.c  ic_emergency_alarm.c  ic_frame_constructor.c  ic_frame_constructor.h  ic_frame_handle.c  ic_nuc.c  ic_pulseoximeter.c  ic_response.c  ic_status.c  ic_version.c  version.h
test/: test.c
